# chechr

./: Cargo.toml  README.md  config.example.json
src/: checker.rs  config.rs  logger.rs  main.rs
src/config/: cpu_config.rs  mod.rs
src/cpu/: cpu_checker.rs  cpu_config.rs  cpu_settings.rs  mod.rs
src/handlers/: cpu.rs  mod.rs  ram.rs
src/helpers/: get_checkers.rs  mod.rs
src/models/: checker.rs  errors.rs  log_level.rs  mod.rs  output.rs
src/ram/: mod.rs  ram_checker.rs  ram_config.rs  ram_settings.rs
src/routes/: health.rs
