[package]
name = "chechr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
axum = "0.8.4"
clap = { version = "4.5.41", features = ["derive"] }
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "time", "fs", "net"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
